--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
             </div>
             <div class="mainForm__content">
                 <div class="mainForm__inputs">
-                    <input placeholder="Ваше имя..."text" class="mainForm__input">
+                    <input placeholder="Ваше имя..." type="text" class="mainForm__input">
                     <input placeholder="Ваш номер телефона..." type="tel" class="mainForm__input">
                     <input placeholder="Ваш e-mail..." type="email" class="mainForm__input">
                 </div>
